--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,19 @@
   <title>FormaReview</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link
+  rel="stylesheet"
+  href="https://app.autodeskforma.eu/design-system/v2/forma/styles/base.css"
+  />
+  <link rel="stylesheet" href="./src/styles.css"/>
+  <script
+    type="module"
+    src="https://app.autodeskforma.eu/design-system/v2/weave/components/button/weave-button.js"
+  ></script>
+  <script
+    type="module"
+    src="https://app.autodeskforma.eu/design-system/v2/weave/components/dropdown/weave-select.js"
+  ></script>
 </head>
 <body>
   <app-root></app-root>
